<resources>
    <string name="app_name">NSBM Assist</string>
    <string name="wel_admin">Welcome To The Admin Console!</string>
    <string name="lecHallAlloc">Lecture Hall Allocation</string>
    <string name="recTt">Recreation Center</string>
    <string name="eveCal">Event Calender</string>
    <string name="stuCent">Student Center</string>
    <string name="trans">Transportation</string>
    <string name="cafe">Cafeteria</string>
    <string name="foc">Faculty of Computing</string>
    <string name="fob">Faculty of Business</string>
    <string name="foe">Faculty of Engineering</string>
    <string name="logBtn">Login As Administrator</string>
    <string name="bk">Back</string>
    <string name="usr">Enter Email</string>
    <string name="pw">Enter Password</string>
    <string name="lg">Login</string>
    <string name="lgot">Logout</string>
    <string name="Rst">Reset</string>
    <string name="admnFac">Select the faculty from the below</string>
    <string name="ad">Add Data</string>
    <string name="updt">Update</string>
    <string name="entCode">Enter Code</string>
    <string name="entLect">Enter Lecture</string>
    <string name="entLecturer">Enter Lecturer</string>
    <string name="entTime">Enter Time</string>
    <string name="entDate">Enter Date</string>
    <string name="entBatch">Enter Batch Number</string>
    <string name="entHall">Enter Hall Number</string>
    <string name="load_data">Loading Data.....</string>
    <string name="lecture">Lecture</string>
    <string name="lecturer_name">Lecturer Name</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="hall">Hall</string>
    <string name="batch">Batch</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="recreation_center">Recreation Center</string>
    <string name="entEve">Enter Event</string>
    <string name="entGroup">Enter Group</string>
    <string name="entVenue">Enter Venue</string>
    <string name="eveName">Event Name</string>
    <string name="group">Group</string>
    <string name="venue">Venue</string>
    <string name="etOrgBy">Organized By</string>
    <string name="organized_by">Organized By</string>
    <string name="entDepTime">Enter Departure Time</string>
    <string name="entArrTime">Enter Arrival Time</string>
    <string name="entDest">Enter Destination</string>
    <string name="entStart">Enter Starting Location</string>
    <string name="startLoc">Starting Location</string>
    <string name="dest">Destination</string>
    <string name="arrTime">Arrival Time</string>
    <string name="depTime">Departure Time</string>
    <string name="entName">Enter Name</string>
    <string name="entOpen">Open From</string>
    <string name="entClose">Closes At</string>
    <string name="name">Name</string>
    <string name="opens_at">Opens At</string>
    <string name="closes_at">Closes At</string>
    <string name="status">Status</string>
</resources>