<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".Activity.Transport.TransDetailsActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/startLoc"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/guidelineFour"
        app:layout_constraintBottom_toTopOf="@id/guidelineFive"
        app:layout_constraintStart_toStartOf="@id/guidelineOne"
        app:layout_constraintEnd_toEndOf="@id/guidelineTwo" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dest"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/guidelineFive"
        app:layout_constraintBottom_toTopOf="@id/guidelineSix"
        app:layout_constraintStart_toStartOf="@id/guidelineOne"
        app:layout_constraintEnd_toEndOf="@id/guidelineTwo" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/arrTime"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/guidelineSix"
        app:layout_constraintBottom_toTopOf="@id/guidelineSeven"
        app:layout_constraintStart_toStartOf="@id/guidelineOne"
        app:layout_constraintEnd_toEndOf="@id/guidelineTwo" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/depTime"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/guidelineSeven"
        app:layout_constraintBottom_toTopOf="@id/guidelineEight"
        app:layout_constraintStart_toStartOf="@id/guidelineOne"
        app:layout_constraintEnd_toEndOf="@id/guidelineTwo" />

    <TextView
        android:id="@+id/tvStartLoc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/guidelineFour"
        app:layout_constraintBottom_toTopOf="@id/guidelineFive"
        app:layout_constraintStart_toStartOf="@id/guidelineTwo"
        app:layout_constraintEnd_toEndOf="@id/guidelineThree" />

    <TextView
        android:id="@+id/tvDest"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/guidelineFive"
        app:layout_constraintBottom_toTopOf="@id/guidelineSix"
        app:layout_constraintStart_toStartOf="@id/guidelineTwo"
        app:layout_constraintEnd_toEndOf="@id/guidelineThree" />

    <TextView
        android:id="@+id/tvArrTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/guidelineSix"
        app:layout_constraintBottom_toTopOf="@id/guidelineSeven"
        app:layout_constraintStart_toStartOf="@id/guidelineTwo"
        app:layout_constraintEnd_toEndOf="@id/guidelineThree" />

    <TextView
        android:id="@+id/tvDepTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/guidelineSeven"
        app:layout_constraintBottom_toTopOf="@id/guidelineEight"
        app:layout_constraintStart_toStartOf="@id/guidelineTwo"
        app:layout_constraintEnd_toEndOf="@id/guidelineThree" />


    <Button
        android:id="@+id/btnBkTrans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/bk"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/guidelineTweleve"
        app:layout_constraintEnd_toEndOf="@id/guidelineThree"
        app:layout_constraintStart_toStartOf="@id/guidelineOne"
        app:layout_constraintTop_toTopOf="@id/guidelineEleven" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEleven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTweleve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>